doc/src/content/docs/en/0.9.x/getting-started/setup/firmware.mdx
---
title: Firmware
description: Steps to update the CPU / FPGA firmware using autd3-console
sidebar:
  order: 2
slug: en/0.9.x/getting-started/setup/firmware
---

import Figure from "@components/Figure.astro";

For the AUTD3 device to operate correctly, a version of the CPU / FPGA firmware compatible with the SDK must be flashed.

:::note
This version of the SDK supports Firmware v0.9.x.
:::

Firmware updates are performed using the **Firmware** tab of the GUI console autd3-console.

:::caution
If the firmware version does not match the SDK, correct operation is not guaranteed.
:::

See [Console](/autd3-sdk/en/0.9.x/guide/console/) for how to obtain it.

## OTA over an Ethernet cable

If both the CPU and the FPGA run firmware v0.9.0 or later, the device can be updated with nothing but an Ethernet cable.
If either is older than v0.9.0, use the JTAG procedure below.

### Prerequisites

Each EtherCAT link requires its own configuration and preparation.
See [Link](/autd3-sdk/en/0.9.x/api/link) for details.

### Procedure

1. Connect the AUTD3 and the PC with an Ethernet cable, then turn on the power
2. Launch autd3-console and open the **Firmware** tab
3. Select **Version** and **Target** (`Both` / `FPGA` / `CPU`). Use `Both` unless you have a reason not to (updating only the CPU leaves the FPGA on a different version, which the SDK refuses to connect to)
4. Make sure **Method** is `EtherCAT (OTA)` (the default)
5. Choose `echocat` / `TwinCAT` / `Remote` under **Link** and fill in the settings (the defaults are fine)
6. Press **Flash**. Progress is shown in the log at the bottom of the panel. The CPU takes tens of seconds, the FPGA about 90 seconds per device
7. The update is complete when `Ok!` appears in the log. No power cycle is needed

**Do not power off the devices during the update.**
If the update fails, power-cycle the devices and try again.

## Updating via JTAG

### Prerequisites

Flashing the firmware requires the following external tools.
In each case, the executable must be on the `PATH` (on Windows, the installation location is detected automatically).

* **FPGA flashing**: [Vivado](https://www.xilinx.com/products/design-tools/vivado.html) (`vivado` / `vivado_lab`) and a [XILINX Platform Cable](https://www.xilinx.com/products/boards-and-kits/hw-usb-ii-g.html) for the connection.

:::note
If the only goal is FPGA flashing, using **Vivado Lab Edition** is strongly recommended.
The standard version (ML Edition) requires over 60 GB to install, whereas the Lab Edition needs only about 6 GB.
:::

* **CPU flashing**: [J-Link Software](https://www.segger.com/downloads/jlink/) (`JLink` / `JLinkExe`) and a [J-Link Plus](https://www.segger.com/products/debug-probes/j-link/models/j-link-plus/) probe via a [J-Link 9-Pin Cortex-M Adapter](https://www.segger-pocjapan.com/j-link-9-pin-cortex-m-adapter).

:::note
When using an older J-Link device (e.g. J-Link Plus V10 or earlier), check "**Install legacy USB Driver for J-Link**" during installation of the J-Link Software.
For details, see the [Segger Wiki](https://wiki.segger.com/J-Link_Model_Overview).
:::

### Flashing Procedure

<Figure src="img/hardware/cable.jpg" alt="Connection points for the firmware update cable" />

1. Turn off the AUTD3 power
2. Connect the cables described above. The connection points are as shown in the figure above.
3. Turn on the AUTD3 power
4. Launch autd3-console and open the **Firmware** tab.
5. Select the version to flash from **Version**
6. Choose the target to flash under **Target** (`Both` / `FPGA` / `CPU`).
7. Choose `JTAG` under **Method**
8. Press **Flash**. Progress is shown in the log at the bottom of the panel. Flashing takes several minutes.
9. After flashing completes, power-cycle the AUTD3 to apply the new firmware.
